// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match its snapshot with items 1`] = `
<div
  className="headerContainer"
>
  <div
    className="ListViewAndSort"
  >
    <div>
      <button
        className="ListView"
        onClick={[Function]}
      >
        Product View
      </button>
    </div>
    <div
      className="sortBy"
    >
      <select
        name="sortOrder"
        onChange={[Function]}
      >
        <option
          value="sort"
        >
          Sort by
        </option>
        <option
          value="low"
        >
          Price Low to High
        </option>
        <option
          value="high"
        >
          Price High to Low
        </option>
      </select>
    </div>
  </div>
  <div
    className="ListTitleAndTotal"
  >
    <h1>
      what's new
    </h1>
    <div
      className="resultBox"
    >
      <div
        className="resultsBox"
      >
        <span>
          500
           Results
        </span>
      </div>
    </div>
  </div>
  <div
    className="pagenationBox"
  >
    <ul
      className="pagenationBoxUl"
    >
      <li
        className="pagination--1 pagenationBoxLi"
        onClick={[Function]}
      >
        <span>
          
        </span>
      </li>
      <li
        className="pagenationBoxCurrentPage"
        onClick={[Function]}
      >
        <span>
          1
        </span>
      </li>
      <li
        className="pagination-2 pagenationBoxLi"
        onClick={[Function]}
      >
        <span>
          2
        </span>
      </li>
      <li
        className="pagination-3 pagenationBoxLi"
        onClick={[Function]}
      >
        <span>
          3
        </span>
      </li>
      <li
        className="pagination-dot pagenationBoxLi"
        onClick={[Function]}
      >
        <span>
          ...
        </span>
      </li>
      <li
        className="pagination-9 pagenationBoxLi"
        onClick={[Function]}
      >
        <span>
          9
        </span>
      </li>
      <li
        className="pagination-0 pagenationBoxLi"
        onClick={[Function]}
      >
        <span>
          
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Header should mount item  1`] = `
<Header>
  <div
    className="headerContainer"
  >
    <ListViewAndSort>
      <div
        className="ListViewAndSort"
      >
        <ListView>
          <div>
            <button
              className="ListView"
              onClick={[Function]}
            >
              Product View
            </button>
          </div>
        </ListView>
        <ListSort>
          <div
            className="sortBy"
          >
            <select
              name="sortOrder"
              onChange={[Function]}
            >
              <option
                value="sort"
              >
                Sort by
              </option>
              <option
                value="low"
              >
                Price Low to High
              </option>
              <option
                value="high"
              >
                Price High to Low
              </option>
            </select>
          </div>
        </ListSort>
      </div>
    </ListViewAndSort>
    <ListTitleAndTotal>
      <div
        className="ListTitleAndTotal"
      >
        <h1>
          what's new
        </h1>
        <div
          className="resultBox"
        >
          <div
            className="resultsBox"
          >
            <span>
               Results
            </span>
          </div>
        </div>
      </div>
    </ListTitleAndTotal>
    <ListPagination>
      <div
        className="pagenationBox"
      >
        <ul
          className="pagenationBoxUl"
        >
          <PageNumber
            page={-1}
          >
            <li
              className="pagination--1 pagenationBoxLi"
              onClick={[Function]}
            >
              <span />
            </li>
          </PageNumber>
          <PageNumber
            page={1}
          >
            <li
              className="pagination-1 pagenationBoxLi"
              onClick={[Function]}
            >
              <span>
                1
              </span>
            </li>
          </PageNumber>
          <PageNumber
            page="..."
          >
            <li
              className="pagination-dot pagenationBoxLi"
              onClick={[Function]}
            >
              <span>
                ...
              </span>
            </li>
          </PageNumber>
          <PageNumber
            page={0}
          >
            <li
              className="pagination-0 pagenationBoxLi"
              onClick={[Function]}
            >
              <span />
            </li>
          </PageNumber>
        </ul>
      </div>
    </ListPagination>
  </div>
</Header>
`;
